# mcu

01-blink/: CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c  main.h
02-control/protocol-task/: protocol-task.c  protocol-task.h
02-control/stdio-task/: stdio-task.c  stdio-task.h
02-echo/: CMakeLists.txt  main.c
02-on-off/: CMakeLists.txt  main.c  on-off.py  on_off.py  on_off_blink.py
02-on-off/led/: led.c  led.h
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c  led-task.h
04-bme/: CMakeLists.txt  main.c  telemetry.py
05-display/: CMakeLists.txt  disp_image.py  main.c
05-display/led-task/: led-task.c  led-task.h
05-display/protocol-task/: protocol-task.c
06-device/: CMakeLists.txt  main.c
libs/bme280-driver/src/: bme280-driver.c
libs/ili9341-driver/: Makefile  cmake_install.cmake
